homework/4-conv-deploy/conv-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: conv-api
  template:
    metadata:
      labels:
        component: conv-api
    spec:
      containers:
      - name: conv-api
        image: ghcr.io/reixxen/conv-api:latest
        resources:
          limits:
            memory: "500Mi"
            cpu: "200m"
          requests:
            memory: "250Mi"
            cpu: "100m"
        ports:
          - containerPort: 3000
        volumeMounts:
          - name: uploads-volume
            mountPath: /opt/app/uploads
      volumes:
        - name: uploads-volume
          persistentVolumeClaim:
            claimName: conv-api-pvc
