homework/4-conv-deploy/conv-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-service-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      component: conv-service
  template:
    metadata:
      labels:
        component: conv-service
    spec:
      containers:
      - name: conv-service
        image: ghcr.io/reixxen/conv-service:latest
        resources:
          limits:
            memory: "500Mi"
            cpu: "200m"
          requests:
            memory: "250Mi"
            cpu: "100m"
        ports:
          - containerPort: 3000
