homework/4-conv-deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: conv.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: conv-app-clusterip
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: conv-api-clusterip
            port:
              number: 3000
